fix download url

--- a/site/index.html
+++ b/site/index.html
@@ -124,7 +124,7 @@
 
                 <div id="download">
 
-                	<a download href="/dist/jerrymarker-v0.1.0.min.js">Download:0.1.0</a>
+                	<a download href="/site/dist/jerrymarker-v0.1.0.min.js">Download:0.1.0</a>
 
                 </div>
 
